--- a/vignettes/guiaDelUsuario.Rmd
+++ b/vignettes/guiaDelUsuario.Rmd
@@ -51,34 +51,33 @@ etapas de desarrollo. Para entender estas diferentes estrategias y
 caracterizarlas, es necesario estudiar la relación entre la temperatura y 
 el desarrollo de los insectos. 
 
-Aqui nos interesarán los insectos poikilotérmicos, que, les recuerdo, 
+Nos interesamos en esta occasión en los insectos poikilotérmos, que, recordamos, 
 corresponden a los insectos cuya temperatura cambiará como consecuencia de los 
-cambios de la temperatura exterior. Estudiaremos más particularmente la tasa 
+cambios de la temperatura exterior. Estudiaremos particularmente la tasa 
 de desarrollo de insectos, generalmente expresada como la inversa de la 
-cantidad de días que pasan desde una etapa de desarrollo a otra. Para este 
-proposito, usaremos datos de la literatura.
+cantidad de días que pasan de una etapa de desarrollo a otra. Para este 
+proposito, usaremos datos disponibles en la literatura.
 
-En la mayoría de los ecosistemas, las condiciones ambientales están cambiando. 
-Este es el caso de la temperatura. Para los insectos poikilotérmicos, esto 
-dará como resultado un cambio en la temperatura de su cuerpo. Estos mismos 
-insectos tendrán un rango de temperatura para el cual pueden desarrollarse, y 
-más allá de lo cual sufrirán un estrés que puede llevarles a la muerte. Por lo 
+En la mayoría de los ecosistemas, las condiciones ambientales son variables. 
+Este es el caso de la temperatura. Para los insectos poikilotérmos, esto 
+dará como resultado un cambio en la temperatura de su cuerpo. Mas alla del 
+rango en el cual pueden desarrollarse, sufrirán un estrés que puede llevarles 
+a la muerte. Por lo 
 tanto, existen umbrales críticos, un umbral mínimo y un umbral máximo, más 
-allá de los cuales los insectos ya no pueden desarrollarse, que se encuentra 
-en la literatura bajo los acrónimos __CTmin__ y __CTmax__ para 
-_Critical Thermal minima_ _Critical Thermal maxima_, respectivamente. Estos 
-límites varían ampliamente de una especie a otra, con algunas especies como el 
+allá de los cuales los insectos no pueden continuar su desarrollo. Esto límites 
+se encuentran en la literatura bajo los acrónimos __CTmin__ y __CTmax__ para 
+_Critical Thermal minima_ _Critical Thermal maxima_, respectivamente. Los 
+mismos varían ampliamente de una especie a otra, con algunas especies como el 
 escarabajo ártico capaz de soportar hasta -70 grados, mientras que otras 
-especies admiten hasta mas de 45 grados. Como se mencionó anteriormente, la 
+admiten hasta mas de 45 grados. Como se mencionó anteriormente, la 
 sensibilidad a la temperatura, que clasifica los insectos de acuerdo con un 
-gradiente de médicos generales a especialistas, también varía mucho de una 
-especie a otra e incluso dentro de una especie entre las diferentes etapas 
-fenológicas.
+gradiente de generalistas a especialistas varía mucho de una 
+especie a otra e incluso dentro de una especie entre sus etapas fenológicas.
 Más allá de estos dos valores umbral, la respuesta de los insectos variará 
-según el tiempo de exposición, la frecuencia de exposición, la velocidad a la 
-que la temperatura se lleva más allá de los valores umbral, la tasa de 
-exposición, la historia de vida de los insectos y, por supuesto, las especies 
-consideradas. En este guía nos enfocaremos en lo que sucede entre estos 
+según el tiempo frecuencia y tasa de exposición, la velocidad a la 
+que la temperatura se lleva más allá de los valores umbral, 
+la historia de vida de los insectos y, por supuesto, las especies 
+consideradas. En esta guía nos enfocaremos en lo que sucede entre estos 
 umbrales.
 
 Para estudiar qué ocurre entre estos dos valores umbral, mediremos el tiempo de
@@ -97,58 +96,59 @@ temperatura óptima para el desarrollo, la supervivencia observada es diferente
 de la temperatura óptima para la supervivencia.
 
 Los estudios sobre la respuesta de los insectos a la temperatura no son 
-nuevos: el primer científico que ha estudiado y publicado sobre el efecto de 
+nuevos: el primer científico que estudio y publico sobre el efecto de 
 la temperatura en los insectos es René-Antoine Ferchault de 
 Réaumur^[https://en.wikipedia.org/wiki/Ren%C3%A9_Antoine_Ferchault_de_R%C3%A9aumur]: 
-sus observaciones sobre las mariposas se registrarán en sus "Mémoires pour 
+sus observaciones sobre las mariposas estan registradas en sus "Mémoires pour 
 servir à l'histoire des insectes" entre 1734 y 1742. Despues de Réaumur, muchos 
-científicos buscaran y siguen buscando cuantificar la relación entre la 
+científicos buscaron y siguen buscando cuantificar la relación entre la 
 temperatura y la tasa de desarrollo.
 
-Para hacer esto, el método más común consiste en un primer paso a colocar 
+Para hacer esto, el método más común consiste en un primer paso en colocar 
 insectos en jaulas a diferentes temperaturas constantes, para medir el tiempo 
-de desarrollo de cada etapa fenológica. Los científicos luego observarán varias 
-características:
+de desarrollo de cada etapa fenológica. Mientras haciendo este experimento, 
+podemos observar algunas características de la respuesta de los insectos a la 
+temperatura:
 
-1. La primera es que es muy difícil, si no imposible, obtener datos de 
+1. La primera que resulta muy difícil, si no imposible, de obtener datos de 
 desarrollo cercanos a los mínimos y máximos, ya que a estas temperaturas la 
 gran mayoría de los insectos de la misma especie y población no sobreviven
-2. La segunda característica es que hay variabilidad dentro de la misma 
+2. La segunda característica es que se observa variabilidad dentro de la misma 
 población de insectos en cuanto a su respuesta a la temperatura
 3) La tercera característica es que para el rango de temperaturas que se 
 encuentra en el hábitat del insecto, la relación entre la temperatura y la 
 tasa de desarrollo es casi lineal, pero fuera de este rango la relación es 
 no lineal
 
-Más allá de estas observaciones, el segundo paso es el ajuste de un modelo 
+El segundo paso es el ajuste de un modelo 
 matemático a las mediciones realizadas en el laboratorio. El objetivo del 
 ajuste es encontrar estimadores de parámetros de manera que el modelo esté lo 
 más cerca posible de los puntos experimentales y al mismo tiempo retenga un 
 significado biológico.
 
-El objetivo de este documento es de proveer una guía para facilitar y analisar 
+El objetivo de este documento es de proveer una guía para facilitar y analizar 
 el ajuste de un modelo matemático a las mediciones realizadas en el laboratorio.
 
 ## Datos del laboratorio
 
 Los datos de laboratorio que vamos a usar son los de _Bactrocera dorsalis_
 ^[https://en.wikipedia.org/wiki/Bactrocera_dorsalis], un insecto del Orden de 
-los Dipteros, que hemos copiados desde el articulo cientifico de Messenger and 
+los Dipteros, que hemos obtenidos a partir del articulo de Messenger and 
 Flitters (1958)^[Messenger, P.S., and Flitters, N.E. (1958). Effect of constant 
 temperature environments on the egg stage of three species of Hawaiian fruit 
 flies. Annals of the Entomological Society of America, 51(2), 109-119.]. Los 
 datos coresponden al tiempo de desarrollo de los huevos expresado en horas a 
 distintas temperaturas expresadas en Fahrenheit.
 
-Para seguir la guía, es nesesario tener R instalado en su computadora. Para 
-usar el paquete devRate, hay que instalarlo mediante:
+Para seguir la guía, es nesesario contar con el programa R instalado en su 
+computadora. Para usar el paquete devRate, hay que instalarlo mediante:
 
 ```
 install.packages("devRate")
 ```
 
 Una vez el paquete instalado, no es necesario repetir a futuro la linea de 
-instalacion. Por lo tanto instalar el paquete no es suficiente para poder 
+instalacion. Sin embargo instalar el paquete no es suficiente para poder 
 usarlo dentro de R. Hay que especificar que vamos a usarlo cada vez que usamos 
 R. Para esto se puede usar: 
 
@@ -156,20 +156,20 @@ R. Para esto se puede usar:
 library("devRate")
 ```
 
-A partir de ahora vamos a trbajar desde un archivo que podriamos llamar 
+A partir de ahora vamos a trabajar desde un archivo que podriamos llamar 
 `B_dorsalis_devRate.R`. Este archivo empeza con un comentario indicando de que 
 se trata para acordarse de su contenido. Todo lo que viene despues del 
 simbolo `#` son comentarios.
 
 ```{r}
-### script para analisar los datos de tasa de desarrollo de B. dorsalis en 
-### funcion de la temperatura.
+### script para analizar los datos de tasa de desarrollo de B. dorsalis en 
+### función de la temperatura.
 require("devRate") # para cargar el paquete devRate
 ```
 
 
 Para que los datos sean reconocidos en R, tenemos que usar un formato especial. 
-Los datos de temperatura son almacenadas en un formato vector que se escribe 
+Los datos de temperatura son almacenados en un formato vector que se escribe 
 con `c()` en R y que corresponde a una colección ordenada de elementos del 
 mismo tipo:
 
@@ -179,7 +179,7 @@ c(55.0, 56.0, 57.0, 58.0, 60.0, 62.5, 65.0, 67.5, 70.0, 75.0, 80.0, 85.0, 87.5,
 ```
 
 Los numeros usan el punto como separator de decimales y la coma como separator 
-de numeros. Aqui las temperaturas estan en Fahrenheit, tenemos que convertirlas 
+de valores. Aqui las temperaturas estan en Fahrenheit, tenemos que convertirlas 
 en Celsius con la formula `T(°C) = (T(°F) - 32) / 1.8`.
 
 ```{r}
@@ -187,19 +187,19 @@ en Celsius con la formula `T(°C) = (T(°F) - 32) / 1.8`.
   90.0, 92.5, 95.0, 96.0, 97.0, 97.5) - 32) / 1.8
 ```
 
-Para guardar las temperaturas, podemos almacenarlas en un objeto. Para afectar 
-las valores de temperaturas a un objeto, se usa los simbolos `<-`. Si queremos 
-guardar las valores de temperatura en un objeto llamado `temp`:
+Para guardar las temperaturas, podemos almacenarlas en un objeto. Para almacenar 
+los valores de temperaturas en un objeto, se usa los simbolos `<-`. Si queremos 
+guardar los valores de temperatura en un objeto llamado `temp`:
 
 ```{r}
 temp <- (c(55.0, 56.0, 57.0, 58.0, 60.0, 62.5, 65.0, 67.5, 70.0, 75.0, 80.0, 
            85.0, 87.5, 90.0, 92.5, 95.0, 96.0, 97.0, 97.5) - 32) / 1.8
 ```
 
-De la misma manera, vamos a guardar las valores de tasa de desarrollo en un 
+De la misma manera, vamos a guardar los valores de tasa de desarrollo en un 
 objeto llamado `devRate`. La tasa de desarrollo corresponde al opuesto del 
-numero de días. Aquí las valores estan expresadas en horas, entonces dividimos 
-el numero de horas por 24 y despues calcualmos el opuesto.
+numero de días. Aquí los valores estan expresados en horas, entonces dividimos 
+el numero de horas por 24 y despues calculamos el opuesto.
 
 ```{r}
 devRate <- 1/(c(263.0, 232.0, 170.5, 148.0, 121.3, 95.5, 74.0, 62.5, 51.5, 
@@ -208,7 +208,7 @@ devRate <- 1/(c(263.0, 232.0, 170.5, 148.0, 121.3, 95.5, 74.0, 62.5, 51.5,
 
 Ahora podemos almacenar los datos de temperatura y de tasa de desarrollo en una 
 tabla `datosLab` donde temperatura y tasa de desarrollo son las columnas. La 
-funcion `data.frame` permite hacer la tabla. 
+función `data.frame` permite hacer la tabla. 
 
 ```{r}
 datosLab <- data.frame(temp, devRate)
@@ -225,40 +225,40 @@ datosLab <- data.frame(
             38.0, 30.5, 27.0, 25.0, 24.0, 23.5, 25.0, 26.5, 29.3, 34.3)/24))
 ```
 
-Podemos verificar el contenido del objeto `datosLab` con la funcion `print` :
+Podemos verificar el contenido del objeto `datosLab` con la función `print` :
 
 ```{r}
 print(datosLab)
 ```
 
-Nuestros datos son listos para empezar el analisis con el paquete devRate.
+Nuestros datos estan listos para empezar el análisis con el paquete devRate.
 
 ## Seleccionar un modelo y ajustarlo
 
 ### El modelo lineal
 
-Aunque tenga limitaciones, el método más común y simple es de usar los 
+Aunque tenga limitaciones, el método más común y simple es usar los 
 resultados obtenidos en la parte casi lineal de la relación entre la 
 temperatura y la tasa de desarrollo. El modelo matemático utilizado es 
 un modelo lineal, la línea de ecuación `y = bb * x + aa` que todos conocen de 
-sus clases de estadistica. Este modelo se basa en la suposición de que la 
+sus clases de estadistica. El uso del modelo lineal fue popularizado por el 
+articulo cientifico de Campbell et al. (1974)^[Campbell, A., Frazer, B.D., 
+Gilbert, N.G.A.P., Gutierrez, A.P., Mackauer, M. (1974). Temperature 
+requirements of some aphids and their parasites. Journal of applied ecology, 
+431-438.]. 
+Este modelo se basa en la suposición de que la 
 relación entre temperatura y desarrollo en insectos es lineal en un cierto 
 rango de temperaturas y sirve de base para el concepto de "grado-dias".
 La extensión de la línea de regresión lineal fuera de la zona de linealidad 
 intersecta el eje x. El valor de la temperatura en esta intersección se 
-denomina temperatura base, que suele estar diferente del CTmin. La temperatura 
-base esta también conocido como el "umbral de desarrollo" y puede calcularse 
+denomina temperatura base, que suele ser diferente del CTmin. La temperatura 
+base es también conocido como el "umbral de desarrollo" y puede calcularse 
 simplemente dividiendo el opuesto de la intersección en y por el coeficiente 
 "a". Pero primero hay que ajustar el modelo a los datos de laboratorio.
 
-El uso del modelo lineal fue popularisado con el articulo cientifico de 
-Campbell et al. (1974)^[Campbell, A., Frazer, B.D., Gilbert, N.G.A.P., 
-Gutierrez, A.P., Mackauer, M. (1974). Temperature requirements of some aphids 
-and their parasites. Journal of applied ecology, 431-438.]. Este modelo es 
-valido dentro de la zona de linearidad de la respuesta de los insectos a la 
-temperatura. Para seleccionar los datos que vamos a usar, puede ser util 
-visualisar los datos de laboratorio en un grafico. Para esto vamos a usar la 
-funcion `plot`.
+Para seleccionar los datos que vamos a usar, puede ser util 
+visualizar los datos de laboratorio en un grafico. Para esto vamos a usar la 
+función `plot`.
 
 ```{r}
 plot(x = datosLab$temp, y = datosLab$devRate, 
@@ -267,7 +267,7 @@ plot(x = datosLab$temp, y = datosLab$devRate,
 ```
 
 Podemos observar que los ultimos cinco puntos salen de la zona de linearidad.
-Para no usar los ultimos cinco puntos, vamos a seleccinar una parte de los 
+Para no usar estos ultimos puntos, vamos a seleccinar una parte de los 
 datos de laboratorio. Quitar los ultimos cinco elementos es igual a seleccionar 
 unicamente las 14 primeras lineas de nuestra tabla. Se usan corchetes para 
 seleccionar una parte de los datos, y una coma para especificar que se trata 
@@ -280,43 +280,48 @@ plot(x = datosLab14$temp, y = datosLab14$devRate,
      xlim = c(0, 40), ylim = c(0, 1.2))
 ```
 
-Aun que se podria ajustar directamente el modelo lineal con la funcion `lm`, 
-vamos a usar la funcion generica del paquete devRate.
+Aun que se podria ajustar directamente el modelo lineal con la función `lm`, 
+vamos a usar la función generica del paquete devRate.
 
 ```{r}
 modLin <- devRateModel(eq = campbell_74, df = datosLab14)
 plot(x = datosLab$temp, y = datosLab$devRate, 
      xlab = "Temperatura", ylab = "Tasa de desarrollo", 
      xlim = c(0, 40), ylim = c(0, 1.2)) # datos del laboratorio
-abline(modLin) # añadir modelo lineal
+abline(modLin) # añadir modelo lineal en el grafico
 print(modLin) # imprimir resultados del ajuste del modelo
 ```
 
-El concepto de modelado de grados-días se basa en la suposición de que los 
-insectos necesitan una suma de temperaturas más allá de la temperatura base 
-para completar su desarrollo. Este guía no discutirá los numerosas métodos 
-disponibles para calcular los días de grado, pero el método más simple es 
+El concepto de grados-días se basa en la hipótesis de que los 
+insectos necesitan un mínimo de acumulación de temperatura 
+para completar su desarrollo. El ciclo de vida de los insectos esta divido en 
+fases. Cada fase del desarrrollo va a necesitar su mínimo de acumulación de 
+temperatura para que el inscto pueda llegar a la fase siguiente y completar su 
+desarrollo. La acumulación de temperatura no empeza desde cero grados, sino de 
+una temperatura base que depende del insecto y de la fase de desarrollo.
+
+Esta guía no discutirá los numerosos métodos 
+disponibles para calcular los grados-días. Sin embargo, el método más simple es 
 agregar el valor de temperatura mínima a la temperatura máxima de un día y 
-luego dividirlo el resultado de la suma por dos para luego eliminar de este 
+luego dividir el resultado de la suma entre dos para luego restar a este 
 resultado el valor de la temperatura base. Es decir, para un día determinado 
 cuando la temperatura máxima es de 25 grados, y la temperatura mínima de 15 
 grados, y con una temperatura base de una especie de insecto dada de 3 grados, 
 el cálculo de los grados los días acumulados en este día son 25 más 15 es 
-igual a 40; dividido por 2 es igual a 20; menos 3 es igual a 17 grados.
-La suma de los grados-días se obtiene sumando los grados de los valores de 
-día para cada nuevo día. El individuo completa su desarrollo cuando la suma 
-de los grados-día alcanza el valor de su constante térmica determinada a 
-partir de la línea de regresión. La constante térmica denotada K es igual a 
-la inversa del coeficiente director de la línea de regresión, es decir, K 
+igual a 40; dividido entre 2 es igual a 20; menos 3 es igual a 17 grados-días.
+El individuo completa su desarrollo cuando la suma 
+de los grados-día alcanza el valor de su constante térmica, determinada a 
+partir de la línea de regresión. La constante térmica denotada por "K" es igual 
+a la inversa del coeficiente director de la línea de regresión, es decir, K 
 es igual a 1 por bb con `y = bbx + aa`, donde `y` representa el desarrollo y 
 `x` la temperatura.
 
 Aqui `bb = 0.04881` y `aa = -0.55176`, entonces: 
 
-* la temperatura base es de `Tbase = -aa/bb = 11.30424`
-* la constante térmica es de `K = 1/bb = 20.4876`.
+* la temperatura base es `Tbase = -aa/bb = 11.30424`
+* la constante térmica es `K = 1/bb = 20.4876`.
 
-Podemos buscar en la base de datos del packete devRate si hay otros modelos 
+Podemos buscar en la base de datos del paquete devRate si hay otros modelos 
 que fueron usados para la especie _Bactrocera dorsalis_.
 
 ```{r}
@@ -324,7 +329,7 @@ devRateFind(species = "Bactrocera dorsalis")
 campbell_74$startVal[campbell_74$startVal$genSp == "Bactrocera dorsalis",]
 ```
 
-Al momento de escribir esta guía, en la base de datos hay dos estudios que 
+Al momento de escribir esta guía, en la base de datos existen dos estudios que 
 han trabajado con _Bactrocera dorsalis_ usando el modelo lineal, pero ninguno 
 ha trabajado unicamente con los huevos, así que no podemos comparar los 
 resultados obtenidos.
@@ -332,14 +337,14 @@ resultados obtenidos.
 Los modelos de grados-días tienen una aplicación directa para predecir, a 
 veces con precisión, la aparición de un insecto basándose en las proyecciones 
 de temperatura futuras, y así servir como un sistema experto para muchas 
-aplicaciones agrícolas o en epidemiología.
+aplicaciones agrícolas o epidemiológicas.
 El concepto de grados-días tiene la ventaja de ser simple y, por lo tanto, 
 fácil de implementar a partir de un conjunto de datos restringidos, pero 
 tiene sus límites.
-En primer lugar, tiende a subestimar el desarrollo de insectos a baja 
-temperatura, en el área entre la temperatura base y la temperatura umbral d
-e desarrollo CTmin. Además, no permite determinar la temperatura umbral de 
-desarrollo más baja, CTmin, ni superior, CTmax. Luego, sobreestima el 
+En primer lugar, tiende a subestimar el desarrollo de insectos a  
+temperaturas bajas, en el área entre la temperatura base y la temperatura 
+umbral de desarrollo CTmin. Además, no permite determinar la temperatura 
+umbral de desarrollo más baja (CTmin), ni superior (CTmax). Luego, sobreestima el 
 desarrollo de los insectos tan pronto como uno se acerca a la temperatura 
 óptima de desarrollo. Por lo tanto, solo puede usarse en un rango limitado 
 de temperaturas y brinda poca información sobre la relación entre la 
@@ -357,32 +362,32 @@ en la documentacion mediante `?devRate` o a traves del objeto `devRateEqList`.
 names(devRateEqList)
 ```
 
-Dentro de todos estos modelos, la seleccion de un modelo no hace consenso en 
+Dentro de todos estos modelos, la seleccion de uno en particular no tiene consenso en 
 la comunidad cientifica. La mayoría de los modelos no lineales se basan en la 
 descripción de la curva de respuesta a la temperatura de los insectos, con un 
 enfoque matemático sin base biológica real, por lo que los diferentes modelos 
-no pueden separarse en sus supuestos subyacentes, y los criterios estadísticas 
+no pueden separarse en sus supuestos subyacentes, y los criterios estadísticos 
 para decidir entre ellos no permiten que un modelo se afirme a sí mismo como 
 mejor que los demás.
 Otros modelos no lineales, llamados modelos biofísicos, se basan en la 
 activación enzimática, como el modelo Sharpe y DeMichèle de 1977, modificado 
 en 1981 por Schoolfield et al. Lamentablemente, estos modelos son más 
-complejos y requieren conjuntos de datos sustanciales para ser utilizados. 
-Además, algunos estudios cuestionan su base teórica. Al final se usan poco.
+complejos y requieren conjuntos de datos vastos para ser utilizados. 
+Además, algunos estudios cuestionan su base teórica. Al final, se usan poco.
 
 Para cuantificar la respuesta de los insectos a la temperatura, se trata de 
-ajustar varios modelos a los conjuntos de datos experimentales, y seleccionar 
-el que mejor responda la problemática del estudio, y compararlo con los 
-criterios de comparación estadísticas.
+ajustar varios modelos al conjunto de datos experimentales, y seleccionar 
+el que mejor responda a la problemática del estudio, y evaluarlo con los 
+criterios de comparación estadísticos.
 Una posibilidad es de buscar en la base de datos del 
-paquete cuales son los mas usados con la funcion `devRateFind` pero como hemos 
-visto anterioramente no hay modelos no lineales que fueron usados al momento 
-de escribir esta guía. Una alternativa es de usar los modelos mas usados como 
-los modelos de Briere, Logan, y Lactin. Para esto, hay que definir valores 
-inciales a los parametros de 
-los modelos para que el aloritmo que va a hacer el ajuste encuentra una 
-solucion. En caso de que no se sabe valores pertinentes para iniciar el 
-algoritmo, se puede usar las valores promedias que se encuentran en la tabla 
+paquete cuales son los mas usados con la función `devRateFind` pero como hemos 
+visto anteriormente no existen modelos no lineales que hayan sido usados al momento 
+de escribir esta guía. Una alternativa es usar los modelos mas comunes como 
+los de Briere, Logan, y Lactin. Para esto, hay que definir valores 
+inciales para los parametros de 
+los modelos para que el algoritmo que va a hacer el ajuste encuentre una 
+solución. En caso de que no se conocen valores pertinentes para iniciar el 
+algoritmo, se puede usar los valores promedios que se encuentran en la tabla 
 `startVal` de cada modelo (por ejemplo `briere1_99$startVal` para el modelo 
 de Briere-1). 
 
@@ -407,7 +412,7 @@ modNoLin_03 <- devRateModel(
 print(modNoLin_03)
 ```
 
-Los resultados se peuden visualisar graficamente con la funcion `devRatePlot`.
+Los resultados se pueden visualizar graficamente con la función `devRatePlot`.
 
 ```{r, fig.width = 7, fig.height = 3}
 par(mfrow = c(1, 3)) # para hacer tres graficos en la misma pagina
@@ -431,7 +436,7 @@ devRatePlot(eq = lactin2_95,
 Existen varios indices estadisticos para comparar los modelos, uno de esos es 
 AIC. El modelo con menor AIC es el que se ajusta mejor a los datos. No 
 significa que el modelo es valido, sino que tiene el mejor ajuste dentro de 
-los modelos selccionados.
+los modelos seleccionados.
 
 ```{r}
 c(AIC(modNoLin_01), AIC(modNoLin_02), AIC(modNoLin_03))
@@ -440,13 +445,13 @@ c(AIC(modNoLin_01), AIC(modNoLin_02), AIC(modNoLin_03))
 En este caso, el modelo de Briere-2 se ajusta mejor a los datos que los otros 
 modelos. Ahora podemos calcular los valores de CTmin, CTmax, y Topt. Primero 
 vamos a simular datos de temperatura desde 0 hasta 45 grados. Despues vamos a 
-hacer una prediccion de tasa de desarrollo para esas temperaturas en base al 
-modelo de Briere-2. Despues especificamos que las valores de tasa de 
-desarrollo negativas son de cero (porque no puede ser negativas), y que las 
+hacer una predicción de la tasa de desarrollo para esas temperaturas en base al 
+modelo de Briere-2. Despues especificamos que los valores de tasa de 
+desarrollo negativos son de cero (porque no pueden ser negativos), y que los 
 valores que faltan tambien son de cero (en caso de que haya valores ausentes). 
-El Topt es el valor de temperatura al cual la tasa de desarrollo esta maxima, 
-el CTmin es el valor de temperatura minima al cual observamos desarrollo y el 
-CTmax el valor de temperatura maxima al cual observamos desarrollo.
+El Topt es el valor de temperatura a la cual la tasa de desarrollo esta máxima, 
+el CTmin es el valor de temperatura mínima a la cual observamos desarrollo y el 
+CTmax el valor de temperatura máxima a la cual observamos desarrollo.
 
 ```{r}
 tempS <- seq(from = 0, to = 45, by = 0.1) # temperaturas simuladas
@@ -462,7 +467,7 @@ CTmax <- tempS[devRateS == min(devRateS[devRateS > 0 &
 cat(paste0("Topt: ", Topt, "\nCTmin: ", CTmin, "\nTmax: ", CTmax))
 ```
 
-## Construir modelos fenologicos
+## Construir modelos fenológicos
 
 Mediante el uso de la tasa de desarrollo, es posible modelar el área de 
 distribución teórica de una especie, es decir, el área en la que el desarrollo 
