--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 
 # devRate package
 
-[![Build Status](https://travis-ci.org/frareb/devRate.svg?branch=master)](https://travis-ci.org/frareb/devRate)
+[![Build Status](https://app.travis-ci.com/frareb/devRate.svg?branch=master)](https://app.travis-ci.com/frareb/devRate)
 [![CRAN version](https://www.r-pkg.org/badges/version/devRate)](https://CRAN.R-project.org/package=devRate)
 [![CRAN downloads](https://cranlogs.r-pkg.org/badges/devRate)](https://CRAN.R-project.org/package=devRate)
 [![Coverage Status](https://img.shields.io/codecov/c/gh/frareb/devRate/master.svg)](https://app.codecov.io/gh/frareb/devRate?branch=master)
